--- a/src/Mapbender/WmcBundle/Resources/translations/messages.it.xlf
+++ b/src/Mapbender/WmcBundle/Resources/translations/messages.it.xlf
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-  <file source-language="en" datatype="plaintext" original="file.ext">
+  <file source-language="it" datatype="plaintext" original="file.ext">
     <body>
       <trans-unit id="c6daaae020364a8d68cf735705392539" resname="mb.wmc.suggestmap.class.title">
         <source>mb.wmc.suggestmap.class.title</source>
-        <target>Suggest map</target>
+        <target>Suggerisci mappa</target>
       </trans-unit>
       <trans-unit id="e14da0b27acc227abcb5e66ba639f6d3" resname="mb.wmc.suggestmap.class.description">
         <source>mb.wmc.suggestmap.class.description</source>
-        <target>Suggest a map</target>
+        <target>Suggerisce una mappa</target>
       </trans-unit>
       <trans-unit id="4c52975ab8325a81dbaf6f445fb2e4b4" resname="mb.wmc.suggestmap.tag.suggest">
         <source>mb.wmc.suggestmap.tag.suggest</source>
-        <target>suggest</target>
+        <target>suggerisce</target>
       </trans-unit>
       <trans-unit id="bafb6d388b664a85037bf6ecc7f6ac88" resname="mb.wmc.suggestmap.tag.map">
         <source>mb.wmc.suggestmap.tag.map</source>
-        <target>map</target>
+        <target>mappa</target>
       </trans-unit>
       <trans-unit id="4e0e50e3930c88c9fece9eb150c7feab" resname="mb.wmc.wmceditor.class.title">
         <source>mb.wmc.wmceditor.class.title</source>
-        <target>WMC editor</target>
+        <target>Editor per WMC</target>
       </trans-unit>
       <trans-unit id="b6d9a92724be41fbb79a84f42708290e" resname="mb.wmc.wmceditor.class.description">
         <source>mb.wmc.wmceditor.class.description</source>
-        <target>Creates and edits WMC documents.</target>
+        <target>Crea e modifica documenti WMC.</target>
       </trans-unit>
       <trans-unit id="351cc8f67e3cb73c27792fba58ef9dd6" resname="mb.wmc.wmceditor.tag.wmc">
         <source>mb.wmc.wmceditor.tag.wmc</source>
@@ -36,11 +36,11 @@
       </trans-unit>
       <trans-unit id="c0fb789744235d2345389b651e413a51" resname="mb.wmc.wmclist.class.title">
         <source>mb.wmc.wmclist.class.title</source>
-        <target>WMC list</target>
+        <target>lista WMC</target>
       </trans-unit>
       <trans-unit id="a466182b91e7c90e8e89e0a7017322ef" resname="mb.wmc.wmclist.class.description">
         <source>mb.wmc.wmclist.class.description</source>
-        <target>Shows available WMC documents at list</target>
+        <target>Mostra i documenti WMC disponibili in lista</target>
       </trans-unit>
       <trans-unit id="3f95f9b38e9577764a01c2a600045872" resname="mb.wmc.wmclist.tag.wmc">
         <source>mb.wmc.wmclist.tag.wmc</source>
@@ -48,7 +48,7 @@
       </trans-unit>
       <trans-unit id="f522491b90f4a0868c31ec17e597d0d9" resname="mb.wmc.wmclist.tag.list">
         <source>mb.wmc.wmclist.tag.list</source>
-        <target>list</target>
+        <target>lista</target>
       </trans-unit>
       <trans-unit id="042eee8054aa3baa9397244d38ad8228" resname="mb.wmc.wmcloader.class.title">
         <source>mb.wmc.wmcloader.class.title</source>
@@ -56,7 +56,7 @@
       </trans-unit>
       <trans-unit id="eb6f1e211f0c4fce0cb4e847844a7ca0" resname="mb.wmc.wmcloader.class.description">
         <source>mb.wmc.wmcloader.class.description</source>
-        <target>A WMC document can be loaded with the element WMC loader.</target>
+        <target>Un documento WMC può essere caricato con l'elemento WMC loader.</target>
       </trans-unit>
       <trans-unit id="fa367490fe08a5c455c902eb5714abe4" resname="mb.wmc.wmcloader.tag.wmc">
         <source>mb.wmc.wmcloader.tag.wmc</source>
@@ -68,51 +68,51 @@
       </trans-unit>
       <trans-unit id="84a803ca295fd79315c77052d5a0e120" resname="mb.wmc.error.wmcxmlloader_notallowed">
         <source>mb.wmc.error.wmcxmlloader_notallowed</source>
-        <target>WMC XML loader is not allowed.</target>
+        <target>Il WMC XML loader non è permesso.</target>
       </trans-unit>
       <trans-unit id="68ab6d8f3b2dc2a0020d23f40b639e97" resname="mb.wmc.error.wmclistloader_notallowed">
         <source>mb.wmc.error.wmclistloader_notallowed</source>
-        <target>WMC list loader is not allowed.</target>
+        <target>Il WMC list loader non è permesso.</target>
       </trans-unit>
       <trans-unit id="f48f2d39314f2615bdabbdd425a3aa44" resname="mb.wmc.error.wmcidloader_notallowed">
         <source>mb.wmc.error.wmcidloader_notallowed</source>
-        <target>WMC id loader is not allowed.</target>
+        <target>Il WMC id loader non è permesso.</target>
       </trans-unit>
       <trans-unit id="923c9f1ba7ebaa2623687b575533fd9e" resname="mb.wmc.error.wmcnotfound">
         <source>mb.wmc.error.wmcnotfound</source>
-        <target>WMC %wmcid% is not found</target>
+        <target>Il WMC %wmcid% non è stato trovato</target>
       </trans-unit>
       <trans-unit id="8eb1b55c6d22699e4185e9883c95528e" resname="mb.wmc.error.wmccannotbeloaded">
         <source>mb.wmc.error.wmccannotbeloaded</source>
-        <target>WMC can't be loaded.</target>
+        <target>Il WMC non può essere caricato.</target>
       </trans-unit>
       <trans-unit id="f41339534794a65fb4c8501b09393bef" resname="mb.wmc.error.wmccannotberemoved">
         <source>mb.wmc.error.wmccannotberemoved</source>
-        <target>WMC cannot be removed.</target>
+        <target>Il WMC non può essere rimosso.</target>
       </trans-unit>
       <trans-unit id="1ad70ada5396eec4995034a94460ca7b" resname="mb.wmc.error.wmcremoved">
         <source>mb.wmc.error.wmcremoved</source>
-        <target>WMC %wmcid% is removed.</target>
+        <target>Il WMC %wmcid% è stato rimosso.</target>
       </trans-unit>
       <trans-unit id="48438f15e13a526eb0ce2f28f4dab55d" resname="mb.wmc.error.wmccannotbesaved">
         <source>mb.wmc.error.wmccannotbesaved</source>
-        <target>WMC %wmcid% can not be saved.</target>
+        <target>Il WMC %wmcid% non può essere salvato.</target>
       </trans-unit>
       <trans-unit id="c6970155c4ab171311dd3b7ae03b109f" resname="mb.wmc.error.wmcsaved">
         <source>mb.wmc.error.wmcsaved</source>
-        <target>WMC %wmcid% is saved.</target>
+        <target>Il WMC %wmcid% è stato salvato.</target>
       </trans-unit>
       <trans-unit id="777a392870477be18bcbb4d9a3a7f675" resname="mb.wmc.error.statecannotbesaved">
         <source>mb.wmc.error.statecannotbesaved</source>
-        <target>State can not be saved.</target>
+        <target>Lo Stato del WMC non può essere salvato.</target>
       </trans-unit>
       <trans-unit id="a5531428c051e5c086db2800e7fb5383" resname="mb.wmc.error.statenotfound">
         <source>mb.wmc.error.statenotfound</source>
-        <target>State %stateid% is not found.</target>
+        <target>Lo Stato %stateid% del WMC non è stato trovato.</target>
       </trans-unit>
       <trans-unit id="ebf155ed57c2b787bf8b9c560fbfab04" resname="mb.wmc.list.add_wmc">
         <source>mb.wmc.list.add_wmc</source>
-        <target>Add new WMC to</target>
+        <target>Aggiungi un nuovo WMC a</target>
       </trans-unit>
       <trans-unit id="e74c2fba29ebe644dd429341c4c5e47c" resname="mb.wmc.list.id">
         <source>mb.wmc.list.id</source>
@@ -120,83 +120,83 @@
       </trans-unit>
       <trans-unit id="64ac0425cbeb81e75690764ce96670ff" resname="mb.wmc.list.title">
         <source>mb.wmc.list.title</source>
-        <target>Title</target>
+        <target>Titolo</target>
       </trans-unit>
       <trans-unit id="6853f27563c23ed2b4e1be8e42b788aa" resname="mb.wmc.list.description">
         <source>mb.wmc.list.description</source>
-        <target>Add configurations from the selectbox to the application.</target>
+        <target>Aggiungi configurazioni all'applicazione dal box di selezione.</target>
       </trans-unit>
       <trans-unit id="1cbc6d988a8f10a8908c92bf0ba0d882" resname="mb.wmc.list.toggle">
         <source>mb.wmc.list.toggle</source>
-        <target>Toggle public/private WMC</target>
+        <target>Alterna WMC pubblico/privato</target>
       </trans-unit>
       <trans-unit id="3f37ac88e8a7ad09bb6494c20f6c7132" resname="mb.wmc.list.wmc_element">
         <source>mb.wmc.list.wmc_element</source>
-        <target>WMC element</target>
+        <target>Elemento WMC</target>
       </trans-unit>
       <trans-unit id="f73abb52294a0a73c218dc300c88f667" resname="mb.wmc.list.delete_wmc">
         <source>mb.wmc.list.delete_wmc</source>
-        <target>Delete WMC</target>
+        <target>Elimina WMC</target>
       </trans-unit>
       <trans-unit id="ebb1d279c88c7e6246c1fee8375c1544" resname="mb.wmc.list.no_wmc">
         <source>mb.wmc.list.no_wmc</source>
-        <target>No WMC added.</target>
+        <target>Nessun WMC aggiunto.</target>
       </trans-unit>
       <trans-unit id="c54d49cd842e05e1585f0b77b3418e8c" resname="mb.wmc.element.suggestmap.error_srs">
         <source>mb.wmc.element.suggestmap.error_srs</source>
-        <target>SRS "%state.extent.srs%" is not supported by this application.</target>
+        <target>L'SRS "%state.extent.srs%" non è supportato per questa applicazione.</target>
       </trans-unit>
       <trans-unit id="4217741b226e6828bb07718c2f8c777f" resname="mb.wmc.element.suggestmap.popup.btn.ok">
         <source>mb.wmc.element.suggestmap.popup.btn.ok</source>
-        <target>Close</target>
+        <target>Chiudi</target>
       </trans-unit>
       <trans-unit id="b3e21adffaf3ec89f78b9fb121257661" resname="mb.wmc.element.wmceditor.popup.btn.ok">
         <source>mb.wmc.element.wmceditor.popup.btn.ok</source>
-        <target>Submit</target>
+        <target>Invia</target>
       </trans-unit>
       <trans-unit id="f958484a8286d7e99e0b3bae50f20464" resname="mb.wmc.element.wmceditor.popup.btn.cancel">
         <source>mb.wmc.element.wmceditor.popup.btn.cancel</source>
-        <target>Cancel</target>
+        <target>Cancella</target>
       </trans-unit>
       <trans-unit id="6afc1f4ee64d70fafe47273f61f5f814" resname="mb.wmc.element.wmceditor.popup.btn.back">
         <source>mb.wmc.element.wmceditor.popup.btn.back</source>
-        <target>Back</target>
+        <target>Torna</target>
       </trans-unit>
       <trans-unit id="c77b9c6d41d8bd287d8ef83b42af7c73" resname="mb.wmc.element.wmchandler.error_srs">
         <source>mb.wmc.element.wmchandler.error_srs</source>
-        <target>SRS "%state.extent.srs%" is not supported by this application.</target>
+        <target>L'SRS "%state.extent.srs%" non è supportato per questa applicazione.</target>
       </trans-unit>
       <trans-unit id="1398f72f7ae5323c2e64e964ec226eec" resname="mb.wmc.element.wmcloader.popup.btn.ok">
         <source>mb.wmc.element.wmcloader.popup.btn.ok</source>
-        <target>Load</target>
+        <target>Carica</target>
       </trans-unit>
       <trans-unit id="aee0a932465b0249ec33aaa2be7e93de" resname="mb.wmc.element.wmcloader.popup.btn.cancel">
         <source>mb.wmc.element.wmcloader.popup.btn.cancel</source>
-        <target>Cancel</target>
+        <target>Cancella</target>
       </trans-unit>
       <trans-unit id="e54528dfe84ed39f66b65d8e39b96393" resname="mb.wmc.element.wmcloader.popup.btn.back">
         <source>mb.wmc.element.wmcloader.popup.btn.back</source>
-        <target>Back</target>
+        <target>Torna</target>
       </trans-unit>
       <trans-unit id="f462936e18a6c720b36b31e3a1c98e47" resname="mb.wmc.element.suggestmap.content.email">
         <source>mb.wmc.element.suggestmap.content.email</source>
-        <target>As e-mail</target>
+        <target>Come e-mail</target>
       </trans-unit>
       <trans-unit id="68f62ac83564cd1967a78fe973897354" resname="mb.wmc.element.suggestmap.content.twitter">
         <source>mb.wmc.element.suggestmap.content.twitter</source>
-        <target>At Twitter</target>
+        <target>A Twitter</target>
       </trans-unit>
       <trans-unit id="309eead6bbe7a4c6f074aa016138668b" resname="mb.wmc.element.suggestmap.content.facebook">
         <source>mb.wmc.element.suggestmap.content.facebook</source>
-        <target>At Facebook</target>
+        <target>A Facebook</target>
       </trans-unit>
       <trans-unit id="74e09603df6a629ced4493817f01b7aa" resname="mb.wmc.element.suggestmap.content.google+">
         <source>mb.wmc.element.suggestmap.content.google+</source>
-        <target>At Google+</target>
+        <target>A Google+</target>
       </trans-unit>
       <trans-unit id="e909afa8127513f6f090d29866ce35f3" resname="mb.wmc.element.wmclist.select.def_option">
         <source>mb.wmc.element.wmclist.select.def_option</source>
-        <target>Pleace select</target>
+        <target>Seleziona</target>
       </trans-unit>
       <trans-unit id="8878f357789b5b60da961e080ea2ee58" resname="mb.wmc.admin.wmclist.label">
         <source>mb.wmc.admin.wmclist.label</source>
@@ -204,27 +204,27 @@
       </trans-unit>
       <trans-unit id="edb605486778167c357ed0b6823e8ee3" resname="mb.wmc.admin.wmcloader.keep_extent">
         <source>mb.wmc.admin.wmcloader.keep_extent</source>
-        <target>Keep Extent</target>
+        <target>Mantieni Estensione</target>
       </trans-unit>
       <trans-unit id="ba7143e6ca93dfdd032e4b4a65a647e8" resname="mb.wmc.wmceditor.create">
         <source>mb.wmc.wmceditor.create</source>
-        <target>Create</target>
+        <target>Crea</target>
       </trans-unit>
       <trans-unit id="a14e74dc580b8058218ea80aa5609dd8" resname="mb.wmc.wmceditor.edit">
         <source>mb.wmc.wmceditor.edit</source>
-        <target>Edit</target>
+        <target>Modifica</target>
       </trans-unit>
       <trans-unit id="58508213964a86022ff74c5f1cca0d40" resname="mb.wmc.wmceditor.publish">
         <source>mb.wmc.wmceditor.publish</source>
-        <target>Publish</target>
+        <target>Pubblica</target>
       </trans-unit>
       <trans-unit id="372aa8e265bdcf107dca482983d1058d" resname="mb.wmc.wmceditor.screenshot">
         <source>mb.wmc.wmceditor.screenshot</source>
-        <target>screenshot or width, height etc.</target>
+        <target>schermata oppure larghezza, altezza ecc.</target>
       </trans-unit>
       <trans-unit id="b516d036d029316adb16f384d744ee3e" resname="mb.wmc.wmc.delete_confirm">
         <source>mb.wmc.wmc.delete_confirm</source>
-        <target>Do you really want to remove the WMC with the title &lt;em&gt;%wmc_title%&lt;/em&gt; and the id &lt;em&gt;%wmc_id%&lt;/em&gt;?</target>
+        <target>Sei sicuro di voler rimuovere il WMC con il titolo &lt;em&gt;%wmc_title%&lt;/em&gt; and the id &lt;em&gt;%wmc_id%&lt;/em&gt;?</target>
       </trans-unit>
       <trans-unit id="cd08999d47cf93c1e3e552de4fdb5aec" resname="mb.wmc.wmceditor.list.id">
         <source>mb.wmc.wmceditor.list.id</source>
@@ -232,35 +232,35 @@
       </trans-unit>
       <trans-unit id="933c6fc439cdab3b3a02f1db39e3897b" resname="mb.wmc.wmceditor.list.title">
         <source>mb.wmc.wmceditor.list.title</source>
-        <target>Title</target>
+        <target>Titolo</target>
       </trans-unit>
       <trans-unit id="329a1abceb8068b5dcdb4d63b46d2bd4" resname="mb.wmc.wmceditor.list.description">
         <source>mb.wmc.wmceditor.list.description</source>
-        <target>Description</target>
+        <target>Descrizione</target>
       </trans-unit>
       <trans-unit id="82be49e5b51462edf1afdec84259533c" resname="mb.wmc.wmceditor.list.add_wmc">
         <source>mb.wmc.wmceditor.list.add_wmc</source>
-        <target>Add new WMC</target>
+        <target>Aggiungi nuovo WMC</target>
       </trans-unit>
       <trans-unit id="76a4bbc43038154b49bcc6bb0d6dbdcf" resname="mb.wmc.wmceditor.list.delete_wmc">
         <source>mb.wmc.wmceditor.list.delete_wmc</source>
-        <target>Delete WMC</target>
+        <target>Elimina WMC</target>
       </trans-unit>
       <trans-unit id="946f46ce5b9c2b8aef78bd102fe7e8f0" resname="mb.wmc.wmceditor.list.edit_wmc">
         <source>mb.wmc.wmceditor.list.edit_wmc</source>
-        <target>Edit WMC</target>
+        <target>Modifica WMC</target>
       </trans-unit>
       <trans-unit id="515cb5901176080db2ddd27c1a6d98ef" resname="mb.wmc.wmceditor.list.toggle">
         <source>mb.wmc.wmceditor.list.toggle</source>
-        <target>Toggle public/private WMC</target>
+        <target>Alterna WMC pubblico/privato</target>
       </trans-unit>
       <trans-unit id="9e9268c8f77f5287dc3c69b830ce3ef1" resname="mb.wmc.wmceditor.list.no_wmc">
         <source>mb.wmc.wmceditor.list.no_wmc</source>
-        <target>No WMC added.</target>
+        <target>Nessun WMC aggiunto.</target>
       </trans-unit>
       <trans-unit id="1ac4a7a92d378d05f8b846a3f28a71b8" resname="mb.wmc.wmcloader.load_xml_wmc">
         <source>mb.wmc.wmcloader.load_xml_wmc</source>
-        <target>Load XML WMC</target>
+        <target>Carica XML WMC</target>
       </trans-unit>
       <trans-unit id="a47ee751707389dcacac6b86f1f552a9" resname="mb.wmc.wmcloader.id">
         <source>mb.wmc.wmcloader.id</source>
@@ -268,23 +268,23 @@
       </trans-unit>
       <trans-unit id="0d974be11a7c230bf72a09e874417fca" resname="mb.wmc.wmcloader.title">
         <source>mb.wmc.wmcloader.title</source>
-        <target>Title</target>
+        <target>Titolo</target>
       </trans-unit>
       <trans-unit id="1744637607776d06471ee642aac7a900" resname="mb.wmc.wmcloader.description">
         <source>mb.wmc.wmcloader.description</source>
-        <target>Description</target>
+        <target>Descrizione</target>
       </trans-unit>
       <trans-unit id="50a0a43d7734636fdca90ac4e93c124b" resname="mb.wmc.wmcloader.view_wmc">
         <source>mb.wmc.wmcloader.view_wmc</source>
-        <target>View WMC</target>
+        <target>Vedi WMC</target>
       </trans-unit>
       <trans-unit id="fa9bcb4301135e8b5a2ea4a460d01971" resname="mb.wmc.wmcloader.no_wmc">
         <source>mb.wmc.wmcloader.no_wmc</source>
-        <target>No WMC.</target>
+        <target>Nessun WMC.</target>
       </trans-unit>
       <trans-unit id="f9e25e70a7d907096e58ee21775675d3" resname="mb.wmc.wmcloader.state.load">
         <source>mb.wmc.wmcloader.state.load</source>
-        <target>Load</target>
+        <target>Carica</target>
       </trans-unit>
     </body>
   </file>
